--- a/apps/client-web/src/app/components/nav/nav.component.html
+++ b/apps/client-web/src/app/components/nav/nav.component.html
@@ -1,60 +1,130 @@
-<nav class="nav">
-  <div class="nav__links">
-    <a routerLink="/" [queryParams]="null" class="nav__links_logo">
-      <span class="nav__links_logo_name">Story</span>
-      <span class="nav__links_logo_name">Stash</span>
-    </a>
-    <p-divider layout="vertical" />
-    <ul class="links">
-      <ng-content select="app-categories" />
-      @for (item of navItems; track item.id) {
-        <li>
-          <a
-            [routerLink]="item.url"
-            routerLinkActive="underline"
-            [queryParams]="item.queryParams"
-            class="link"
-          >
-            {{ item.name }}
-          </a>
-        </li>
-      }
-    </ul>
-  </div>
-
-  <div class="utility-wrapper">
-    <a
-      class="p-button p-button-text search"
-      routerLink="/browse"
-      [queryParams]="null"
-      pTooltip="Search the books"
-      tooltipPosition="bottom"
-    >
-      <i class="pi pi-search" style="font-size: 1.5rem"></i>
-    </a>
+<div class="mobile-toolbar">
+  <p-toolbar nav>
     <p-button
-      type="button"
-      [text]="true"
-      (click)="menu.toggle($event)"
-      class="user"
-      pTooltip="View your account"
-      tooltipPosition="bottom"
-      icon="pi pi-user"
+      navButton
+      size="large"
+      icon="pi pi-bars"
+      (onClick)="toggleNavigation()"
     />
-    <p-menu appendTo="body" #menu [model]="menuItems()" [popup]="true">
-      <ng-template pTemplate="end">
-        <p-divider />
-        <div class="menu">
-          <span>light</span>
-          <p-inputSwitch
-            [(ngModel)]="theme"
-            (onChange)="onChangeTheme($event)"
-          />
-          <span>dark</span>
-        </div>
-      </ng-template>
-    </p-menu>
-
+    <p-button
+      navButton
+      size="large"
+      routerLink="/browse"
+      routerLinkActive="active"
+      [queryParams]="null"
+      [state]="{}"
+      icon="pi pi-search"
+    />
+    <p-button
+      navButton
+      size="large"
+      routerLink="/"
+      routerLinkActive="active"
+      [routerLinkActiveOptions]="{ exact: true }"
+      [queryParams]="null"
+      [state]="{}"
+      icon="pi pi-home"
+    />
+    <p-button navButton size="large" routerLink="/account" icon="pi pi-user" />
     <ng-content select="lib-cart-sidebar" />
-  </div>
-</nav>
+  </p-toolbar>
+</div>
+
+<p-sidebar
+  sidebarLeft
+  [(visible)]="isOpen"
+  [blockScroll]="true"
+  class="sidebar"
+>
+  <ng-container [ngTemplateOutlet]="links" />
+</p-sidebar>
+
+<aside class="aside">
+  <nav class="nav">
+    <div class="nav__links">
+      <a routerLink="/" [queryParams]="null" class="nav__links_logo">
+        <span class="nav__links_logo_name">Story</span>
+        <span class="nav__links_logo_name">Stash</span>
+      </a>
+      <p-divider />
+      <ul class="items">
+        <p-button
+          navButton
+          routerLink="/browse"
+          routerLinkActive="active"
+          [queryParams]="null"
+          [state]="{}"
+          icon="pi pi-search"
+          label="Browse"
+        />
+        <ng-container [ngTemplateOutlet]="links" />
+      </ul>
+    </div>
+
+    <div class="nav__footer">
+      <ng-content select="lib-cart-sidebar" />
+      @if (isAuthenticated()) {
+        <p-button
+          navButton
+          routerLink="/account"
+          icon="pi pi-user"
+          label="Account"
+        />
+        <p-button
+          navButton
+          (onClick)="logoutEvent.emit()"
+          icon="pi pi-sign-out"
+          label="Log out"
+        />
+      } @else {
+        <p-button
+          navButton
+          routerLink="/login"
+          icon="pi pi-sign-in"
+          label="Log in"
+        />
+        <p-button
+          navButton
+          routerLink="/register"
+          icon="pi pi-user-plus"
+          label="Register"
+        />
+      }
+      <p-divider />
+      <div class="menu">
+        <span>Light</span>
+        <p-inputSwitch [(ngModel)]="theme" (onChange)="onChangeTheme($event)" />
+        <span>Dark</span>
+      </div>
+    </div>
+  </nav>
+</aside>
+
+<ng-template #links>
+  @if (isAccountRouteActive()) {
+    @for (menuItem of menuItems(); track menuItem.label) {
+      <p-button
+        navButton
+        [routerLink]="menuItem.routerLink"
+        routerLinkActive="active"
+        [queryParams]="null"
+        [icon]="menuItem.icon"
+        [label]="menuItem.label"
+        (onClick)="isOpen.set(false)"
+      />
+    }
+  } @else {
+    @for (category of categories(); track category.id) {
+      <p-button
+        navButton
+        routerLink="/browse"
+        [queryParams]="{
+          categories: category.name.toLowerCase().split(' ').join('_'),
+        }"
+        [label]="category.name"
+        [state]="{ category: stringifyCategory(category) }"
+        (onClick)="isOpen.set(false)"
+      />
+    }
+  }
+</ng-template>
