--- a/libs/client-web/shared/ui/src/lib/book-card-skeleton/book-card-skeleton.component.scss
+++ b/libs/client-web/shared/ui/src/lib/book-card-skeleton/book-card-skeleton.component.scss
@@ -1,4 +1,5 @@
 .book-card-skeleton {
+  background-color: var(--surface-section);
   max-width: 34rem;
   border-radius: var(--border-radius);
   border-color: var(--surface-border);
