--- a/apps/client-web/src/app/app.component.html
+++ b/apps/client-web/src/app/app.component.html
@@ -1,12 +1,13 @@
 <p-toast />
-<app-nav [isAuthenticated]="isAuthenticated()" (logoutEvent)="logout()">
-  <app-categories
-    [categories]="(categories$ | async) ?? []"
-    [loading]="!!(loading$ | async)"
-    [error]="error$ | async"
-  />
-  <lib-cart-sidebar />
-</app-nav>
 <div class="wrapper">
-  <router-outlet />
+  <app-nav
+    [isAuthenticated]="isAuthenticated()"
+    (logoutEvent)="logout()"
+    [categories]="categories()"
+  >
+    <lib-cart-sidebar />
+  </app-nav>
+  <div class="router">
+    <router-outlet />
+  </div>
 </div>
