--- a/libs/client-web/account/feature/shell/src/lib/shell/shell.component.html
+++ b/libs/client-web/account/feature/shell/src/lib/shell/shell.component.html
@@ -1,6 +1,6 @@
-<div class="shell">
-  <p-menu class="menu" [model]="menuItems()" />
-  <div class="router">
-    <router-outlet />
-  </div>
-</div>
+<!-- <div class="shell"> -->
+<!--   <p-menu class="menu" [model]="menuItems()" /> -->
+<!--   <div class="router"> -->
+<router-outlet />
+<!--   </div> -->
+<!-- </div> -->
