--- a/libs/client-web/browse/feature/books/src/lib/filters/filters.component.scss
+++ b/libs/client-web/browse/feature/books/src/lib/filters/filters.component.scss
@@ -16,10 +16,18 @@
   .filters {
     display: block;
     position: sticky;
-    top: calc(var(--header-height) + 2rem);
-    height: calc(100svh - var(--header-height) - 4rem);
+    top: var(--gap);
+    height: min-content;
+    max-height: calc(100svh - 2 * var(--gap));
+    border-radius: var(--border-radius);
     overflow-y: auto;
     width: 100%;
+    scrollbar-width: thin;
+    scrollbar-color: var(--text-color-secondary) var(--surface-hover);
+    box-shadow:
+      0px 3px 5px rgba(0, 0, 0, 0.02),
+      0px 0px 2px rgba(0, 0, 0, 0.05),
+      0px 1px 4px rgba(0, 0, 0, 0.08);
   }
 
   .open-sidebar-button {
