--- a/libs/client-web/account/feature/orders/src/lib/orders.component.html
+++ b/libs/client-web/account/feature/orders/src/lib/orders.component.html
@@ -8,6 +8,8 @@
     dataKey="id"
     [tableStyle]="{
       width: '100%',
+      'background-color': 'var(--surface-section)',
+      'border-radius': 'var(--border-radius)',
     }"
     [loading]="loading()"
     [showLoader]="false"
