--- a/libs/client-web/account/feature/shell/src/lib/shell/shell.component.scss
+++ b/libs/client-web/account/feature/shell/src/lib/shell/shell.component.scss
@@ -16,8 +16,8 @@
   .menu {
     display: block;
     position: sticky;
-    top: calc(var(--header-height) + 2rem);
-    max-height: calc(100svh - var(--header-height) - 4rem);
+    top: var(--gap);
+    max-height: calc(100svh - 2 * var(--gap));
   }
 }
 
