--- a/libs/client-web/browse/feature/books/src/lib/books.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/books.component.html
@@ -1,5 +1,5 @@
 <div class="books">
-  <lib-filters class="desktop-filters" maxWidth="26rem" />
+  <lib-filters class="desktop-filters" />
   <div class="books__content">
     <div class="books__content-bar">
       <p-breadcrumb [model]="breadcrumbs()" />
