--- a/libs/client-web/browse/ui/src/lib/active-filters/active-filters.component.html
+++ b/libs/client-web/browse/ui/src/lib/active-filters/active-filters.component.html
@@ -1,7 +1,7 @@
 <div class="active-filters">
   <p-button
     size="small"
-    class="min-w-max"
+    [style]="{ 'min-width': 'max-content' }"
     label="Clear filters"
     severity="contrast"
     (click)="clearFiltersEvent.emit()"
