--- a/libs/client-web/account/ui/src/lib/order/order.component.scss
+++ b/libs/client-web/account/ui/src/lib/order/order.component.scss
@@ -27,7 +27,7 @@
 }
 
 .order {
-  background-color: var(--surface-hover);
+  background-color: var(--surface-section);
   border-radius: var(--border-radius);
   padding: 1rem;
   display: flex;
@@ -76,12 +76,12 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  background-color: var(--surface-hover);
+  background-color: var(--surface-section);
   padding: 1rem;
 }
 
 .summary {
-  background-color: var(--surface-hover);
+  background-color: var(--surface-section);
   padding: 1rem;
   display: flex;
   flex-direction: column;
