--- a/libs/client-web/browse/feature/books/src/lib/filters/filters.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/filters/filters.component.html
@@ -18,7 +18,7 @@
 </p-sidebar>
 
 <ng-template #filters>
-  <p-accordion [multiple]="false">
+  <p-accordion>
     <lib-tag-filter />
     <lib-author-filter />
     <lib-category-filter />
