--- a/libs/client-web/browse/ui/src/lib/active-filters/active-filters.component.scss
+++ b/libs/client-web/browse/ui/src/lib/active-filters/active-filters.component.scss
@@ -1,12 +1,11 @@
 .active-filters {
   display: flex;
   gap: 0.25rem;
-  overflow-x: auto;
   padding-bottom: 0.25rem;
-  width: 100%;
+  flex-wrap: wrap;
 
   &__item {
-    background-color: var(--surface-hover);
+    background-color: var(--surface-section);
     border-radius: var(--border-radius);
     display: flex;
     align-items: center;
