--- a/libs/client-web/cart/ui/src/lib/order-process-detail-element/order-process-detail-element.component.scss
+++ b/libs/client-web/cart/ui/src/lib/order-process-detail-element/order-process-detail-element.component.scss
@@ -5,7 +5,7 @@
   padding: 1rem;
   border-radius: var(--border-radius);
   border: 1px solid transparent;
-  background-color: var(--surface-hover);
+  background-color: var(--surface-section);
   width: 100%;
 
   &__label {
