Add animation to expand and collapse aside

--- a/apps/client-web/src/app/app.component.html
+++ b/apps/client-web/src/app/app.component.html
@@ -1,12 +1,6 @@
 <p-toast />
 <div class="wrapper">
-  <app-nav
-    [isAuthenticated]="isAuthenticated()"
-    (logoutEvent)="logout()"
-    [categories]="categories()"
-  >
-    <lib-cart-sidebar />
-  </app-nav>
+  <app-nav />
   <div class="router">
     <router-outlet />
   </div>
