--- a/libs/client-web/browse/feature/books/src/lib/filters/price-filters/price-filters.component.scss
+++ b/libs/client-web/browse/feature/books/src/lib/filters/price-filters/price-filters.component.scss
@@ -1,18 +1,11 @@
-:host ::ng-deep {
-  .p-inputnumber {
-    width: 100%;
-  }
-}
-
 .price-filter {
   display: flex;
   align-items: flex-end;
   gap: 0.5rem;
+  padding: 1rem;
 
   &__divider {
     margin-bottom: 0.5rem;
     width: 2rem;
-    // display: flex;
-    // align-items: center;
   }
 }
